--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
-    "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
@@ -24,6 +23,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
