--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "bookshelf": "^0.10.3",
     "classnames": "^2.2.5",
+    "knex": "^0.13.0",
     "lodash": "^4.17.4",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -34,6 +38,7 @@
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8",
     "validator": "^7.2.0"
   }
 }
